--- a/flink-dist-tob/src/main/flink-bin/conf/log4j-las.properties
+++ b/flink-dist-tob/src/main/flink-bin/conf/log4j-las.properties
@@ -19,11 +19,10 @@
 # This affects logging for both user code and Flink
 shutdownHook                        = disable
 rootLogger.level                    = INFO
-rootLogger.appenderRefs             = console,file,rolling,gas
+rootLogger.appenderRefs             = console,file,rolling
 rootLogger.appenderRef.console.ref  = ConsoleAppender
 rootLogger.appenderRef.file.ref     = MainAppender
 rootLogger.appenderRef.rolling.ref  = ByteRollingFile
-rootLogger.appenderRef.gas.ref      = gas-appender
 
 # The following lines keep the log level of common libraries/connectors on
 # log level INFO. The root logger does not override this. You have to manually
@@ -83,28 +82,3 @@ property.filePathTemplate           = flink/${env:INSTANCE_ID}/${env:WORKSPACE_I
 property.tosEndpoint                = ${env:LOG.TOS.ENDPOINT}
 property.accessKeyId                = ${env:LOG.TOS.AK}
 property.accessKeySecret            = ${env:LOG.TOS.SK}
-
-# gas appender
-appender.gas.type = GAS
-appender.gas.name = gas-appender
-#appender.gas.endpoint = http://daemon.bytedance.com:8080/  https://gas-log-proxy-boe.byted.org/
-appender.gas.endpoint = ${env:LOG.GAS_ENDPOINT}
-appender.gas.topic = openstudio-job-logs
-appender.gas.sync = true
-appender.gas.parallelism = ${env:LOG.PARALLELISM:-2}
-appender.gas.accountId = ${env:LOG.ACCOUNT_ID}
-appender.gas.project = ${env:LOG.PROJECT_ID}
-appender.gas.application = ${env:LOG.APPLICATION_ID}
-appender.gas.deployment = ${env:LOG.DEPLOYMENT_ID}
-appender.gas.engine = flink
-appender.gas.role = ${env:_FLINK_COMPONENT}
-appender.gas.user = ${env:LOG.USER_ID}
-appender.gas.fields.type = fields
-appender.gas.fields.component.type = field
-appender.gas.fields.component.name = component
-appender.gas.fields.component.value = ${env:_FLINK_COMPONENT}
-appender.gas.fields.podName.type = field
-appender.gas.fields.podName.name = podName
-appender.gas.fields.podName.value = ${env:HOSTNAME}
-appender.gas.layout.type = PatternLayout
-appender.gas.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c - %m%n
