--- a/flink-dist-tob/src/main/resources/flink-conf-las.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf-las.yaml
@@ -210,3 +210,5 @@ common:
   # metrics
   metrics.reporters: prometheus
   metrics.reporter.prometheus.class: org.apache.flink.metrics.prometheus.PrometheusReporter
+  kubernetes.flink.jobmanager-user-ports: prometheus:9249
+  kubernetes.flink.taskmanager-user-ports: prometheus:9249
