[#5250890] Add TerarkDB jni and metrics.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -89,7 +89,8 @@ global:
         numberOfCheckpointPlaceholderTransformed,
         numberOfTmExceedQuota,
         numberOfFailedDiscardExpiredCheckpointFolder,
-        upstreamTaskErrorNum
+        upstreamTaskErrorNum,
+        numberOfTerarkdbJobs
     ]
 
 non-global:
