--- a/flink-dist-tob/pom.xml
+++ b/flink-dist-tob/pom.xml
@@ -137,7 +137,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>fterarkdbjni</artifactId>
-			<version>5.18.3-bytedance-terark-1.0-SNAPSHOT</version>
+			<version>${rocksdb.jni.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
