--- a/flink-state-backends/flink-statebackend-rocksdb/pom.xml
+++ b/flink-state-backends/flink-statebackend-rocksdb/pom.xml
@@ -54,12 +54,12 @@ under the License.
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.data-artisans</groupId>
-			<artifactId>frocksdbjni</artifactId>
-			<version>5.17.2-artisans-2.0</version>
-		</dependency>
 
+		<dependency>
+			<groupId>com.bytedance</groupId>
+			<artifactId>fterarkdbjni</artifactId>
+			<version>${rocksdb.jni.version}</version>
+		</dependency>
 		<!-- test dependencies -->
 
 		<dependency>
