[#4932263][bytetable] feat: upgrade bytetable client to fix connection redundancy and support ipv6

--- a/flink-connectors/flink-sql-connector-bytetable/pom.xml
+++ b/flink-connectors/flink-sql-connector-bytetable/pom.xml
@@ -149,6 +149,16 @@ under the License.
 									<shadedPattern>${shading.prefix}.org.apache.hbase</shadedPattern>
 								</relocation>
 							</relocations>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
 						</configuration>
 					</execution>
 				</executions>
