fix: revert "[#5250890] Add TerarkDB jni and metrics."
This reverts commit 3197b733c1b857f2ff0dda8bb4f4c00c9edeccd9

--- a/flink-state-backends/flink-statebackend-rocksdb/pom.xml
+++ b/flink-state-backends/flink-statebackend-rocksdb/pom.xml
@@ -54,12 +54,12 @@ under the License.
 			<scope>provided</scope>
 		</dependency>
 
-
 		<dependency>
-			<groupId>com.bytedance</groupId>
-			<artifactId>fterarkdbjni</artifactId>
-			<version>${rocksdb.jni.version}</version>
+			<groupId>com.data-artisans</groupId>
+			<artifactId>frocksdbjni</artifactId>
+			<version>5.17.2-artisans-2.0</version>
 		</dependency>
+
 		<!-- test dependencies -->
 
 		<dependency>
