--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -89,8 +89,7 @@ global:
         numberOfCheckpointPlaceholderTransformed,
         numberOfTmExceedQuota,
         numberOfFailedDiscardExpiredCheckpointFolder,
-        upstreamTaskErrorNum,
-        numberOfTerarkdbJobs
+        upstreamTaskErrorNum
     ]
 
 non-global:
