--- a/flink-connectors/flink-connector-bytesql/pom.xml
+++ b/flink-connectors/flink-connector-bytesql/pom.xml
@@ -76,7 +76,13 @@ under the License.
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-metrics-databus</artifactId>
+            <version>1.11-byted-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<profiles>
 		<profile>
