--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -1701,6 +1701,7 @@ Gaura-LF:
   ipv6.supported.cluster: Gaura-LF
   resourcemanager.slow-container.release-timeout-enabled: true
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc01:fe:100e::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 Gaura-HL:
   dc: cn
@@ -1719,6 +1720,7 @@ Gaura-HL:
   ipv6.supported.cluster: Gaura-HL
   resourcemanager.slow-container.release-timeout-enabled: true
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc02:fe:1016::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 Echo-HL:
   dc: cn
@@ -1736,6 +1738,7 @@ Echo-HL:
   ipv6.enabled: true
   ipv6.supported.cluster: Echo-HL
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 Foxtrot-HL:
   dc: cn
@@ -1753,6 +1756,7 @@ Foxtrot-HL:
   ipv6.enabled: true
   ipv6.supported.cluster: Foxtrot-HL
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 Gaura-LQ:
   dc: cn
@@ -1771,6 +1775,7 @@ Gaura-LQ:
   ipv6.supported.cluster: Gaura-LQ
   resourcemanager.slow-container.release-timeout-enabled: true
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc03:fe:1019::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 Echo-LQ:
   dc: cn
@@ -1788,6 +1793,7 @@ Echo-LQ:
   ipv6.enabled: true
   ipv6.supported.cluster: Gaura-LQ
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 Foxtrot-LQ:
   dc: cn
@@ -1805,6 +1811,7 @@ Foxtrot-LQ:
   ipv6.enabled: true
   ipv6.supported.cluster: Foxtrot-LQ
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 Gaura-YG:
   dc: cn
@@ -1823,6 +1830,7 @@ Gaura-YG:
   ipv6.supported.cluster: Gaura-YG
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc05:fe:1007::1]:65212"
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 cloudnative-lf:
   dc: cn
@@ -1840,6 +1848,7 @@ cloudnative-lf:
   flink.external.jar.dependencies: "connectors/flink-connector-bmq-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-databus-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-doris-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-htap_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-jdbc_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-loghouse-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-metrics-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-redis-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-rocketmq-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-tos-1.11-byted-SNAPSHOT.jar,connectors/flink-sql-connector-hive-1.2.2-bd31_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-sql-connector-kafka-0.10_2.11-1.11-byted-SNAPSHOT.jar,formats/flink-binlog-1.11-byted-SNAPSHOT.jar,formats/flink-bytes-1.11-byted-SNAPSHOT.jar,formats/flink-json-1.11-byted-SNAPSHOT.jar,formats/flink-pb-1.11-byted-SNAPSHOT.jar,formats/flink-sequence-file-1.11-byted-SNAPSHOT.jar"
   ipv6.supported.cluster: cloudnative-lf
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc01:fe:100e::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 cloudnative-lq:
   dc: cn
@@ -1855,6 +1864,7 @@ cloudnative-lq:
   flink.external.jar.dependencies: "connectors/flink-connector-bmq-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-databus-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-doris-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-htap_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-jdbc_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-loghouse-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-metrics-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-redis-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-rocketmq-1.11-byted-SNAPSHOT.jar,connectors/flink-connector-tos-1.11-byted-SNAPSHOT.jar,connectors/flink-sql-connector-hive-1.2.2-bd31_2.11-1.11-byted-SNAPSHOT.jar,connectors/flink-sql-connector-kafka-0.10_2.11-1.11-byted-SNAPSHOT.jar,formats/flink-binlog-1.11-byted-SNAPSHOT.jar,formats/flink-bytes-1.11-byted-SNAPSHOT.jar,formats/flink-json-1.11-byted-SNAPSHOT.jar,formats/flink-pb-1.11-byted-SNAPSHOT.jar,formats/flink-sequence-file-1.11-byted-SNAPSHOT.jar"
   ipv6.supported.cluster: cloudnative-lq
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc03:fe:1019::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 Feins-LQ:
   dc: cn
@@ -1871,6 +1881,7 @@ Feins-LQ:
   ipv6.enabled: true
   ipv6.supported.cluster: Feins-LQ
   resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
 
 Seif-BOE:
   dc: cn
@@ -1893,6 +1904,7 @@ Seif-BOE:
   kubernetes.ingress.host: "boe-seif.byted.org"
   ipv6.enabled: true
   ipv6.supported.cluster: Seif-BOE
+  containerized.taskmanager.env.use_ss_lib: false
 
 Koryn-LQ:
   dc: cn
@@ -1910,6 +1922,7 @@ Koryn-LQ:
   register-dashboard.enabled: true
   ipv6.supported.cluster: Koryn-LQ
   flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc03:fe:1019::1]:65212"
+  containerized.taskmanager.env.use_ss_lib: false
 
 edge:
   dc: cn
@@ -1918,3 +1931,4 @@ edge:
   high-availability: none
   execution.checkpointing.enable: false
   state.checkpoints.dir: "file:///opt/tiger/flink_deploy/logs/"
+  containerized.taskmanager.env.use_ss_lib: false
