--- a/flink-metrics/flink-metrics-databus/pom.xml
+++ b/flink-metrics/flink-metrics-databus/pom.xml
@@ -46,6 +46,7 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-databus4j</artifactId>
 			<version>${flink.shaded.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
@@ -181,10 +182,6 @@ under the License.
 										<!-- 3.	<exclude>com.bytedance.data.databus.*</exclude>-->
 										<exclude>com.bytedance.data.databus.**</exclude>
 									</excludes>
-								</relocation>
-								<relocation>
-									<pattern>com.codahale.metrics</pattern>
-									<shadedPattern>org.apache.flink.metrics.databus.shaded.com.codahale.metrics</shadedPattern>
 								</relocation>
 								<relocation>
 									<pattern>com.sun.xml</pattern>
