--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -1889,7 +1889,11 @@ Seif-BOE:
   is_kubernetes: true
   high-availability: zookeeper
   high-availability.zookeeper.quorum: 10.225.33.2:2181,10.225.28.3:2181,10.225.33.6:2181,10.225.125.22:2181,10.225.125.29:2181
-  hdfs.prefix: hdfs://westeros/flink_boe
+  hdfs.prefix: s3p://flink-test-boe/
+  s3.access-key: "RAWWJUFTSO91QR8VGX9K"
+  s3.secret-key: "EdSwzXlh30GmjbhF1lm9G+p5xZBPUs1HYWnLA+rT"
+  s3.endpoint: "http://tos-sss.byted.org"
+  s3.path.style.access: true
   checkpoint.hdfs.prefix: hdfs://westeros/flink_boe
   # todo only add MALLOC_ARENA_MAX in k8s now, because YARN already set this env which will cause overlapping problem
   dashboard.data_source: bytetsd_boe
