--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -1873,7 +1873,7 @@ Feins-LQ:
   clusterName: Feins-LQ
   is_kubernetes: true
   high-availability: zookeeper
-  high-availability.zookeeper.quorum: 10.248.236.172:2181,10.248.248.176:2181,10.248.234.180:2181,10.248.243.170:2181,10.248.243.148:2181
+  high-availability.zookeeper.quorum: fdbd:dc03:ff:f2:0:248:236:172:2181,fdbd:dc03:ff:f2:0:248:248:176:2181,fdbd:dc03:ff:f2:0:248:234:180:2181,fdbd:dc03:ff:f2:0:248:243:170:2181,fdbd:dc03:ff:f2:0:248:243:148:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   # todo only add MALLOC_ARENA_MAX in k8s now, because YARN already set this env which will cause overlapping problem
   containerized.master.env.MALLOC_ARENA_MAX: 4
@@ -1884,6 +1884,45 @@ Feins-LQ:
   ipv6.supported.cluster: Feins-LQ
   resourcemanager.slow-container.release-timeout-enabled: true
   containerized.taskmanager.env.use_ss_lib: false
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc03:fe:1019::1]:65212"
+
+Feins-HL:
+  dc: cn
+  clusterName: Feins-HL
+  is_kubernetes: true
+  high-availability: zookeeper
+  # shares the same ZK cluster as Gaura-HL
+  high-availability.zookeeper.quorum: fdbd:dc02:ff:2:1:226:110:167:2181,fdbd:dc02:ff:2:1:226:110:162:2181,fdbd:dc02:ff:2:1:226:119:168:2181,fdbd:dc02:ff:2:1:226:126:143:2181,fdbd:dc02:ff:2:1:226:122:156:2181
+  hdfs.prefix: hdfs://haruna/flink_hl
+  # todo only add MALLOC_ARENA_MAX in k8s now, because YARN already set this env which will cause overlapping problem
+  containerized.master.env.MALLOC_ARENA_MAX: 4
+  containerized.taskmanager.env.MALLOC_ARENA_MAX: 4
+  # service & ingress related
+  kubernetes.ingress.host: "hl-feins.byted.org"
+  ipv6.enabled: true
+  ipv6.supported.cluster: Feins-HL
+  resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc02:fe:1016::1]:65212"
+
+Feins-LF:
+  dc: cn
+  clusterName: Feins-LF
+  is_kubernetes: true
+  high-availability: zookeeper
+  # shares the same ZK cluster as Gaura-LF
+  high-availability.zookeeper.quorum: fdbd:dc01:ff:1:1:203:13:5:2181,fdbd:dc01:ff:1:1:203:22:4:2181,fdbd:dc01:ff:1:1:203:9:24:2181,fdbd:dc01:ff:1:1:203:19:4:2181,fdbd:dc01:ff:1:1:203:7:6:2181
+  hdfs.prefix: hdfs://haruna/flink_lf
+  # todo only add MALLOC_ARENA_MAX in k8s now, because YARN already set this env which will cause overlapping problem
+  containerized.master.env.MALLOC_ARENA_MAX: 4
+  containerized.taskmanager.env.MALLOC_ARENA_MAX: 4
+  # service & ingress related
+  kubernetes.ingress.host: "lf-feins.byted.org"
+  ipv6.enabled: true
+  ipv6.supported.cluster: Feins-LF
+  resourcemanager.slow-container.release-timeout-enabled: true
+  containerized.taskmanager.env.use_ss_lib: false
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc01:fe:100e::1]:65212"
 
 Seif-BOE:
   dc: cn
