[#5734998] tob: Remove gcs log appender.

--- a/flink-dist-tob/src/main/flink-bin/conf/log4j-las.properties
+++ b/flink-dist-tob/src/main/flink-bin/conf/log4j-las.properties
@@ -19,10 +19,9 @@
 # This affects logging for both user code and Flink
 shutdownHook                        = disable
 rootLogger.level                    = INFO
-rootLogger.appenderRefs             = console,file,rolling
+rootLogger.appenderRefs             = console,file
 rootLogger.appenderRef.console.ref  = ConsoleAppender
 rootLogger.appenderRef.file.ref     = MainAppender
-rootLogger.appenderRef.rolling.ref  = ByteRollingFile
 
 # The following lines keep the log level of common libraries/connectors on
 # log level INFO. The root logger does not override this. You have to manually
@@ -59,26 +58,3 @@ appender.main.strategy.max          = 5
 # Suppress the irrelevant (wrong) warnings from the Netty channel handler
 logger.netty.name                   = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
 logger.netty.level                  = OFF
-
-#tos appender(it will be deprecated in the feature versions)
-logger.rolling.name                 = com.bytedance
-logger.rolling.level                = INFO
-appender.rolling.type               = ByteRollingFile
-appender.rolling.name               = ByteRollingFile
-appender.rolling.fileName           = log/byteLog.log
-appender.rolling.filePattern        = log/byteLog-%d{yyyy-MM-dd}-%i.log
-appender.rolling.layout.type        = PatternLayout
-appender.rolling.layout.pattern     = [%d{yyyy-MM-dd HH:mm:ss:SSS}] [%p] - %l - %m%n
-appender.rolling.policies.type      = Policies
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.strategy.type      = DefaultRolloverStrategy
-#
-appender.rolling.policies.size.size = 10MB
-appender.rolling.strategy.max       = 10
-#
-property.regionId                   = ${env:LOG.TOS.REGION_ID}
-property.bucket                     = ${env:LOG.TOS.BUCKET}
-property.filePathTemplate           = flink/${env:INSTANCE_ID}/${env:WORKSPACE_ID}/${env:CLUSTER_ID}/logs/${env:SUBMIT_ID}/running/${env:LOG.ROLE}-${env:_FLINK_POD_NAME}/log
-property.tosEndpoint                = ${env:LOG.TOS.ENDPOINT}
-property.accessKeyId                = ${env:LOG.TOS.AK}
-property.accessKeySecret            = ${env:LOG.TOS.SK}
